Eigth webpage commit - cleaned up redundant or uneeded code, fixed footer clipping over text in columns

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,18 +9,20 @@ header{
 body{
     background-color: gray;
     background: url("https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131_960_720.jpg");
+    
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
-    
+    background-position: center center;    
 }
 footer{
     width: 100%;
-    height: 15%;
-    background: url("https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131_960_720.jpg");       
-    bottom: 0;
-    position: fixed;
-    margin: -8px;
+    height: 100px;
+    background: url("https://cdn.pixabay.com/photo/2015/12/03/08/50/paper-1074131_960_720.jpg");      
+    display:inline-block;
+    position: relative;
+    margin:-10px;
+    padding-right: 18px;
+    
 }
 h1 {
     color: black;
@@ -41,11 +43,6 @@ p {
     font-size: 15px;
     text-emphasis: wrap;
 }
-p2 {
-    font-family: monospace;
-    font-size: 15px;
-    word-wrap: break-word;
-}
 .row {
     display: flex;
     
@@ -53,7 +50,8 @@ p2 {
 .column{
     flex: 50%;
     color:black;
-    margin: 10px;       
+    margin: 10px;
+        
 }
 
 
